fix: fix class hierarchy

--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>fr.inria.gforge.spoon</groupId>
-            <artifactId>spoon-core</artifactId>
-            <version>5.5.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>fr.inria.gforge.spoon</groupId>-->
+            <!--<artifactId>spoon-core</artifactId>-->
+            <!--<version>5.5.0</version>-->
+        <!--</dependency>-->
 
 
     </dependencies>
