--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
             <!--<artifactId>spoon-core</artifactId>-->
             <!--<version>5.5.0</version>-->
         <!--</dependency>-->
-
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-cypher</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 
