--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     compile "org.neo4j:neo4j-cypher:3.1.0"
     compile "net.sourceforge.argparse4j:argparse4j:0.7.0"
     compile fileTree(dir: 'libs', include: '*.jar')
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    // Logging
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.slf4j:slf4j-log4j12:1.7.25'
+
 }
 
 apply plugin: 'application'
