--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 
 
 dependencies {
-    compile "fr.inria.gforge.spoon:spoon-core:5.8.0-SNAPSHOT"
+    compile "fr.inria.gforge.spoon:spoon-core:6.2.0"
     compile "org.neo4j:neo4j-cypher:3.1.0"
     compile "net.sourceforge.argparse4j:argparse4j:0.7.0"
     compile fileTree(dir: 'libs', include: '*.jar')
