--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group 'fr.inria.sniffer.detector'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 sourceCompatibility = 1.7
